--- a/cleaned_ratings_reviews.ipynb
+++ b/cleaned_ratings_reviews.ipynb
@@ -48,7 +48,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "6eb39f81-f34d-4c13-afc1-c3dad13f7ab8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -317,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
